# WingHexExplorer2-SDK

./: CMakeLists.txt  LICENSE  README.md  hexeditorcontext.cpp  hexeditorcontext.h  hexeditorpalette.cpp  hexeditorpalette.h  iwingangel.cpp  iwingangel.h  iwingdevice.cpp  iwingdevice.h  iwinghexeditorplugin.cpp  iwinghexeditorplugin.h  iwingmanager.cpp  iwingmanager.h  iwingplugin.cpp  iwingplugin.h  iwingpluginbase.cpp  iwingpluginbase.h  iwingpluginbasecalls.cpp  iwingpluginbasecalls.h  iwingplugincalls.cpp  iwingplugincalls.h  scriptobjects.cpp  scriptobjects.h  settingpage.cpp  settingpage.h  wingcore.h  wingeditorviewwidget.cpp  wingeditorviewwidget.h  wingplugin_global.h  wingplugincallconvertor.cpp  wingplugincallconvertor.h  wingplugincalls.cpp  wingplugincalls.h  wingplugincalls_p.h  wingpluginwidget.cpp  wingpluginwidget.h
.github/workflows/: clang-format-check.yml
